# app/Http/Controllers/AuthController.php
@@ -100,6 +100,18 @@ class AuthController extends Controller
     }
 
     /**
+     * @OA\Post(
+     *      path= "/auth/logout",
+     *      summary =  "Cerrar sesion",
+     *      tags = {"Auth"}, 
+     *      @OA\Response(
+     *          response=200,
+     *          description = "OK"),
+     *      @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *      ) 
+     * )
      * Log the user out (Invalidate the token).
      *
      * @return \Illuminate\Http\JsonResponse
@@ -112,6 +124,22 @@ class AuthController extends Controller
     }
 
     /**
+     * @OA\Post(
+     *      path= "/auth/refresh",
+     *      summary =  "Refresco del token",
+     *      tags = {"Auth"},
+     * 
+     *      @OA\Response(
+     *          response=200,
+     *          description = "OK"),
+     *      @OA\Response(
+     *          response=401,
+     *          description = "No autorizado"),
+     *      @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *      ) 
+     * )
      * Refresh a token.
      *
      * @return \Illuminate\Http\JsonResponse
@@ -143,7 +171,41 @@ class AuthController extends Controller
             'rol' => $rol
         ]);
     }
-
+    /** 
+     * @OA\Post(
+     *      path= "/auth/activar",
+     *      summary =  "Activacion de la cuenta de un docente",
+     *      tags = {"Auth"},
+     *       @OA\RequestBody(
+     *         @OA\JsonContent(
+     *              @OA\Property(
+     *                  property="cod_SIS", 
+     *                  type="int"
+     *               ),
+     *               @OA\Property(
+     *                  property="nombre", 
+     *                  type="string"
+     *               ),
+     *               @OA\Property(
+     *                  property="celular", 
+     *                  type="int",
+     *               ),
+     *               @OA\Property(
+     *                  property="email", 
+     *                  type="string",
+     *               ),
+     *         ),        
+     *    ),
+     *      @OA\Response(
+     *          response=200,
+     *          description = "OK"),
+     *      @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *      ) 
+     * )
+     * 
+    */
     public function activar(Request $request){
         $validator = Validator::make($request->all(),[
             'cod_SIS'=>'required',
